# Summon

./: .env.example  .gitignore  Anchor.toml  PRIVACY.md  README.md  app.json  credentials.example.json  eas.json  index.js  metro.config.js  package-lock.json  package.json
.superstack/: build-context.md
app/: _layout.tsx  account.tsx  index.tsx  login.tsx  onboarding.tsx
app/(tabs)/: _layout.tsx  collection.tsx  index.tsx  proof.tsx
app/collectible/: [id].tsx
components/: app-providers.tsx
components/summon/: app-icon.tsx  collectible-mark.tsx  email-login-form.tsx  empty-state.tsx  loading-state.tsx  reveal-modal.tsx  screen-shell.tsx  social-login-form.tsx  wallet-pill.tsx
constants/: app-config.ts  theme.ts
docs/: BACKEND.md  BACKEND_TODO.md  SEEKER_RELEASE.md
features/account/: account-feature-create-wallet.tsx  account-feature-get-balance.tsx  account-feature-index.tsx  account-feature-login.tsx  account-feature-logout.tsx  account-feature-sign-message.tsx  account-feature-sign-transaction.tsx  use-account-get-balance.tsx
features/network/: network-provider.tsx  network-ui-select.tsx  use-connection.ts  use-network-get-genesis-hash.tsx  use-network-get-version.tsx
features/onboarding/: use-onboarding.ts
features/summon/: catalog.ts  mock-summon-repository.ts  (+4 more)
plugins/: with-dapp-store-signing.js
programs/summon/: Cargo.toml
programs/summon/src/: lib.rs
scripts/: check-seeker-release.mjs  sync-program-idl.mjs  verify-android-apk.mjs  verify-program-idl.mjs  verify-seeker-config.mjs
store-listing/: metadata.md
utils/: privy-user.ts
(+3 files in other folders)
