[package]
name = "summon"
version = "0.1.0"
description = "Verifiably random Summon inventory on MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "summon"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.15.5", features = ["anchor"] }
ephemeral_vrf_sdk = { package = "ephemeral-vrf-sdk", version = "0.4.1", features = ["anchor"] }
solana-sha256-hasher = "3.1.0"
